--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.jpa.generate-ddl=false
-
-# COMPLETELY RESETS THE SCHEMA EACH TIME (DEV ONLY)
 spring.jpa.hibernate.ddl-auto=none
-# Disables foreign key checks due to errors when resetting the db for dev purposes
-spring.datasource.url=jdbc:mariadb://localhost:3305/behaviourchange?sessionVariables=FOREIGN_KEY_CHECKS=0
-spring.datasource.username=root
-spring.datasource.password=comsc
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.sql.init.mode=always
-spring.sql.init.platform=maria
-# Running all demo data within resources/data
+spring.jpa.defer-datasource-initialization=true
+
 spring.sql.init.data-locations=classpath:data/*.sql
 
-debug = true
+debug=true
+server.port=${PORT:8080}
